--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Redirect...</title>
-
-  <!-- Chuyển trang ngay -->
   <meta http-equiv="refresh" content="0; url=movie-discovery/index.html" />
-  <script>
-    location.replace("movie-discovery/index.html");
-  </script>
+  <script>location.replace("movie-discovery/index.html");</script>
 </head>
 <body>
   Nếu không tự chuyển, bấm:
